<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:padding="16dp"
    tools:context=".Dividir">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Título -->
        <TextView
            android:id="@+id/tvTitleDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/menu_title_division"
            android:textColor="@color/sky_blue"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNum1Div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/Num1"
            android:inputType="number"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edtNum2Div"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/Num2"
            android:inputType="number"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnCalDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/sun_yellow"
            android:paddingHorizontal="24dp"
            android:text="@string/resultado_division"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <!-- Resultado -->
        <TextView
            android:id="@+id/txtResulDiv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado_es"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>