<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:padding="16dp"
    tools:context=".ui.matematicas.Multiplicar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Título -->
        <TextView
            android:id="@+id/tvTitleSumar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/menu_title_multiplicacion"
            android:textColor="@color/sky_blue"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtNum1Mult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/Num1"
            android:inputType="number"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edtNum2Mult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/Num2"
            android:inputType="number"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/sun_yellow"
            android:paddingHorizontal="24dp"
            android:text="@string/resultado_multiplacion"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtResulMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultado_es"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>