<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backg"
    android:padding="16dp"
    tools:context=".Imc">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvTitleImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/calculadora_imc"
            android:textColor="@color/sky_blue"
            android:textSize="26sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/ingrese_su_peso_kg"
            android:inputType="numberDecimal"
            android:padding="10dp" />

        <EditText
            android:id="@+id/edtAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:background="@android:drawable/edit_text"
            android:hint="@string/ingrese_su_altura_m"
            android:inputType="numberDecimal"
            android:padding="10dp" />

        <Button
            android:id="@+id/btnCalImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/sun_yellow"
            android:paddingHorizontal="24dp"
            android:text="@string/calcular_imc"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtResulImc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tu_imc_es"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <ImageView
            android:id="@+id/imgCategoriaImc"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="40dp"
            android:contentDescription="categoria_imc"
            android:src="@drawable/normal" />
    </LinearLayout>
</ScrollView>